syntax = "proto3";

option java_multiple_files = true;
option java_package = "goapiboilerplate.grpc.proto";
option java_outer_classname = "UserProto";

package proto;

import "google/protobuf/empty.proto";

// UserService handles commands dispatch and user view actions
service UserService {
  rpc DispatchCommand(DispatchCommandRequest) returns (google.protobuf.Empty);
  rpc GetUser(GetUserRequest) returns (User);
  rpc ListUsers(ListUserRequest) returns (ListUserResponse);
}

// DispatchCommandRequest is passed when dispatching
message DispatchCommandRequest {
  string name = 1;
  bytes payload = 2;
}

// User object
message User {
  string id = 1;
  string provider = 2;
  string name = 3;
  string email = 4;
  string password = 5;
  string nickname = 6;
  string location = 7;
  string avatarurl = 8;
  string description = 9;
  string userid = 10;
  string refreshtoken = 11;
}

// GetUserRequest is a request data to read user
message GetUserRequest {
  string id = 1;
}

// ListUserRequest is a request data to read all user for a given page
message ListUserRequest {
  int32 page = 1;
  int32 limit = 2;
}

// ListUserResponse list of all users
message ListUserResponse {
  repeated User users = 1;
  int32 page = 2;
  int32 limit = 3;
  int32 total = 4;
}
